# labubot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/constants/: constants.py  match_enum.py
app/decorators/: refresh.py
app/gemini/: match_prompt_cv.py
app/gmail_api/: read_emails.py
app/scraping/: driver.py  scrap_linkedin.py
app/telegram/: telegram_bot.py
